# docs/swagger.json
@@ -847,6 +847,29 @@
                 }
             }
         },
+        "/api/users/publish": {
+            "post": {
+                "description": "Makes the user profile visible by setting hidden_at to null",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Publish user profile",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/StatusResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/users/{id}": {
             "get": {
                 "consumes": [
@@ -861,8 +884,8 @@
                 "summary": "Get user",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "User ID",
+                        "type": "string",
+                        "description": "User ID or username",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -1133,6 +1156,23 @@
                 }
             }
         },
+        "Link": {
+            "type": "object",
+            "properties": {
+                "label": {
+                    "type": "string"
+                },
+                "order": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "url": {
+                    "type": "string"
+                }
+            }
+        },
         "Location": {
             "type": "object",
             "properties": {
@@ -1184,6 +1224,12 @@
                 "description": {
                     "type": "string"
                 },
+                "links": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Link"
+                    }
+                },
                 "location_id": {
                     "type": "string"
                 },
@@ -1225,6 +1271,12 @@
                 "last_active_at": {
                     "type": "string"
                 },
+                "links": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Link"
+                    }
+                },
                 "location": {
                     "$ref": "#/definitions/CityResponse"
                 },
@@ -1263,6 +1315,9 @@
                 "description": {
                     "type": "string"
                 },
+                "hidden_at": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
@@ -1271,6 +1326,12 @@
                 },
                 "last_active_at": {
                     "type": "string"
+                },
+                "links": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/Link"
+                    }
                 },
                 "location": {
                     "$ref": "#/definitions/CityResponse"
